testsuite/tests/saks/should_fail/saks_fail001.hs
-- No -XStandaloneKindSignatures!

module SAKS_Fail001 where

import Data.Kind (Type)

type T :: Type
data T
